# bpy-meshbuilder

./: .gitignore  README.md  pyproject.toml
examples/: gaussian.py
meshbuilder/: __init__.py
