[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bpy-meshbuilder"
version = "0.0.1"
authors = [{ name = "Sachchit Kunichetty", email = "skunich@umich.edu" }]
description = "Mesh manipulation utilities for Blender Python scripting"
requires-python = "~=3.11"
keywords = ["blender", "mesh"]
dependencies = ["bpy==4.4.0"]


[tool.setuptools.packages.find]
include = ["meshbuilder*"]
